Started offering alternate bracket suggestions, but this has not yet fixed the fix tests.